# truthstory

./: .gitignore  README.md  pyproject.toml
specifications/: README.md  development.yaml  features.yaml
specifications/architecture/: overview.yaml
specifications/data-models/: news-article.yaml
specifications/interfaces/: service-communication.yaml
specifications/services/: news-crawler.yaml
specifications/services/news-crawler/plugins/: liberation.fr-article.md  liberation.fr.md
src/demo-interface/: README.md
