[tool.poetry]
name = "truthstory"
version = "0.1.0"
description = "TruthStory project"
authors = ["openhands <openhands@all-hands.dev>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^7.0"
black = "^22.0"
flake8 = "^4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"